force-app/main/default/objects/FEC_Pending_Disbursement__c/FEC_Pending_Disbursement__c.object-meta.xml
<CustomObject>
    <label>Pending Disbursement</label>
    <nameField>
        <displayFormat>PD - {0}</displayFormat>
        <label>Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>