force-app/main/default/objects/FEC_Pending_Disbursement__c/fields/FEC_PD_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_PD_Application_Status__c</fullName>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>