force-app/main/default/objects/FEC_Pending_Disbursement__c/fields/FEC_PD_CS_Decision__c.field-meta.xml
<CustomField>
    <fullName>FEC_PD_CS_Decision__c</fullName>
    <label>CS Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>