force-app/main/default/objects/FEC_Pending_Disbursement__c/fields/FEC_PD_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_PD_Disbursed_Amount__c</fullName>
    <label>Disbursed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>