force-app/main/default/objects/FEC_Pending_Disbursement__c/fields/FEC_PD_Disbursement_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_PD_Disbursement_Approval_Date__c</fullName>
    <label>Disbursement Approval Date</label>
    <type>Date</type>
</CustomField>